Correção de Delete de Item Inventory
