# src/docs/swagger.yaml
@@ -374,6 +374,8 @@ paths:
         summary: Adiciona um novo usuário
         consumes:
           - application/json
+        security:
+        - bearerAuth: []
         parameters:
           - in: body
             name: user
@@ -467,11 +469,6 @@ paths:
         operationId: indexInventories
         security:
           - bearerAuth: []
-        parameters:
-        - in: header
-          name: Authorization
-          type: string
-          required: true
         responses:
           200:
             description: Success
@@ -709,7 +706,7 @@ paths:
         500:
           description: Erro interno no servidor
   
-  '/iteminventory/{itemId}':
+  '/iteminventory/{itemId}/{inventoryId}':
     delete:
       tags:
         - ItemInventory
@@ -727,14 +724,14 @@ paths:
           type: integer
           format: int32
           required: true
+        - in: path
+          name: inventoryId
+          type: integer
+          format: int32
+          required: true
       responses:
-        200:
+        204:
           description: Item excluído
-          schema:
-            type: object
-            properties:
-              itemOnInventory:
-                $ref: '#/definitions/Item'
         400:
           description: Requisição inválida
         401:
@@ -752,7 +749,7 @@ paths:
         - application/json
       parameters:
         - in: body
-          name: authentication_
+          name: item_
           schema:
               type: object
               properties:
